--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,10 @@
   --color-sand-light: #FAF8F5;
   --color-cream: #FFFEF9;
 
-  /* Navy Palette */
-  --color-navy: #1A2B4A;
-  --color-navy-light: #2D4A6E;
-  --color-navy-dark: #0F1A2E;
+  /* Walnut Palette (formerly Navy) */
+  --color-navy: #8C7864;
+  --color-navy-light: #A69485;
+  --color-navy-dark: #6B5A4A;
 
   /* Accent Colors */
   --color-terracotta: #C4836A;
