--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,10 @@
   --color-sand-light: #FAF8F5;
   --color-cream: #FFFEF9;
 
-  /* Walnut Palette (formerly Navy) */
-  --color-navy: #8C7864;
-  --color-navy-light: #A69485;
-  --color-navy-dark: #6B5A4A;
+  /* Taupe Palette (formerly Navy/Walnut) */
+  --color-navy: #B7A996;
+  --color-navy-light: #C9BDAD;
+  --color-navy-dark: #9A8C7A;
 
   /* Accent Colors */
   --color-terracotta: #C4836A;
